feat: add release workflow and bump version to 1.0.0